--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <h1>Weather API Results</h1>
 
     <form action="/" method="post">
-        <label for="cityInput">City Name: </label>
-        <input id = "cityInput" type="text" name="cityInput">
+      
+        <label for="lat">Latitude: </label>
+        <input id = "lat" type="text" name="lat">
+
+        <label for="long">Longitude: </label>
+        <input id = "long" type="text" name="long">
+
+      
         <button type="submit">Go</button>
     </form>
 
