added cloudiness to result page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <label for="lat">Latitude: </label>
         <input id = "lat" type="text" name="lat">
 
-        <label for="long">Longitude: </label>
-        <input id = "long" type="text" name="long">
+        <label for="lon">Longitude: </label>
+        <input id = "lon" type="text" name="lon">
 
       
         <button type="submit">Go</button>
