--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Weather API Results</h1>
 
     <form action="/" method="post">
-        <label for="cityInput">City Name: </label>
+        <label for="cityInput">City ID: </label>
         <input id = "cityInput" type="text" name="cityInput">
         <button type="submit">Go</button>
     </form>
